--- a/style.css
+++ b/style.css
@@ -2,3 +2,95 @@
     margin: 0;
     padding: 0;
 }
+
+header {
+    padding-top: 100px;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    width: 1300px;
+    box-shadow: 5px 5px 5px rgba(166, 166, 166, 0.4);
+    padding: 50px;
+}
+
+.about-title {
+    font-size: 70px;
+    font-weight: 300;
+}
+
+.about-text {
+    font-size: 35px;
+    line-height: 1.4;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: rgb(73, 73, 73);
+}
+
+.icons {
+    align-self: flex-end;
+    display: flex;
+    gap: 20px;
+}
+
+.about-container .icons>svg {
+    height: 70px;
+    width: 70px;
+}
+
+.header-img-container {
+    width: 1000px;
+    height: 1000px;
+    background-image: url(https://images.pexels.com/photos/927451/pexels-photo-927451.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+}
+
+main {
+    padding: 150px;
+}
+
+.body-title {
+    font-size: 60px;
+    font-weight: 300;
+}
+
+.projects-container {
+    display: grid;
+    grid-template-columns: repeat(3, 30%);
+    grid-template-rows: repeat(2, 50%);
+    gap: 5%;
+}
+
+.project-card {
+    display: flex;
+    flex-direction: column;
+}
+
+.content {
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.title-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.project-title {
+    font-size: 25px;
+    font-weight: 400;
+}
+
+.title-container>.icons {
+    display: flex;
+    height: 30px;
+}
