--- a/style.css
+++ b/style.css
@@ -3,10 +3,20 @@
     padding: 0;
 }
 
+.background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #0891B2;
+    transform: skewY(-15deg) translateY(calc(55vw * tan(-30deg)));
+    z-index: -1;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.5);
+}
+
 header {
     padding-top: 100px;
-    padding-left: 150px;
-    padding-right: 150px;
+    margin: 50px auto;
+    max-width: 1500px;
 }
 
 .header-container {
@@ -17,38 +27,39 @@ header {
 .about-container {
     display: flex;
     flex-direction: column;
-    gap: 50px;
-    width: 1300px;
-    box-shadow: 5px 5px 10px rgba(166, 166, 166, 0.4);
+    gap: 10px;
+    width: 800px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
     padding: 50px;
+    background-color: white;
 }
 
 .about-title {
-    font-size: 70px;
+    font-size: 50px;
     font-weight: 300;
 }
 
 .about-text {
-    font-size: 35px;
-    line-height: 1.4;
+    font-size: 25px;
+    line-height: 1.2;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: rgb(73, 73, 73);
 }
 
-.title-container>.icons {
+.header-container .icons {
     align-self: flex-end;
     display: flex;
-    gap: 20px;
+    gap: 10px;
 }
 
 .about-container .icons>svg {
-    height: 70px;
-    width: 70px;
+    height: 50px;
+    width: 50px;
 }
 
 .header-img-container {
-    width: 1000px;
-    height: 1000px;
+    width: 600px;
+    height: 600px;
     background-image: url(https://images.pexels.com/photos/927451/pexels-photo-927451.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
     background-position: center;
@@ -57,20 +68,23 @@ header {
 }
 
 main {
-    padding: 150px;
+    margin: 50px auto;
+    max-width: 1500px;
+    padding-top: 150px;
+    padding-bottom: 150px;
 }
 
 .body-title {
-    font-size: 100px;
+    font-size: 50px;
     font-weight: 300;
     padding-bottom: 10px;
 }
 
 .projects-container {
     display: grid;
-    grid-template-columns: repeat(3, 30.7%);
+    grid-template-columns: repeat(3, 450px);
     grid-template-rows: repeat(2, 50%);
-    gap: 80px;
+    gap: 75px;
 }
 
 .project-card {
@@ -104,6 +118,7 @@ main {
 
 .title-container>.icons {
     display: flex;
+    gap: 10px;
     height: 30px;
 }
 
@@ -115,18 +130,24 @@ main {
     font-weight: 300;
     display: flex;
     align-items: center;
-    justify-content: center;
+    text-align: center;
 }
 
 footer {
     background-color: #0891B2;
-    padding-left: 150px;
-    padding-right: 150px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer>div {
+    margin: 50px auto;
+    width: 1500px;
+    max-width: 1500px;
+    color: white;
     display: flex;
     justify-content: space-between;
-    color: white;
+    align-items: center;
 }
 
 .footer-content {
@@ -136,13 +157,13 @@ footer {
 }
 
 .contact {
-    font-size: 100px;
+    font-size: 70px;
     font-weight: 300;
     padding-bottom: 10px;
 }
 
 .footer-content p {
-    font-size: 40px;
+    font-size: 35px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -161,4 +182,8 @@ footer {
     display: flex;
     height: 80px;
     width: 50%;
+}
+
+.footer-img {
+    width: 900px;
 }
