--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header {
 
 .about-text {
     font-size: 25px;
-    line-height: 1.2;
+    line-height: 1.4;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: rgb(73, 73, 73);
 }
@@ -67,6 +67,10 @@ header {
     background-size: cover;
 }
 
+.shape {
+    display: none;
+}
+
 main {
     margin: 50px auto;
     max-width: 1500px;
@@ -83,7 +87,7 @@ main {
 .projects-container {
     display: grid;
     grid-template-columns: repeat(3, 450px);
-    grid-template-rows: repeat(2, 50%);
+    grid-template-rows: repeat(2, 550px);
     gap: 75px;
 }
 
@@ -163,7 +167,7 @@ footer>div {
 }
 
 .footer-content p {
-    font-size: 35px;
+    font-size: 25px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -180,10 +184,78 @@ footer>div {
 
 .footer-content>.icons {
     display: flex;
+    gap: 10px;
     height: 80px;
     width: 50%;
 }
 
 .footer-img {
     width: 900px;
+}
+
+@media (max-width: 1600px) {
+    header {
+        padding-top: 100px;
+        margin: 50px auto;
+        max-width: 1000px;
+    }
+
+    .about-title {
+        padding-bottom: 10px;
+    }
+
+    .shape {
+        display: block;
+        float: left;
+        min-width: 400px;
+        min-height: 300px;
+        shape-outside: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+
+    .header-container {
+        display: grid;
+        height: 800px;
+    }
+
+    .about-container {
+        width: 825px;
+        display: block;
+        justify-self: flex-end;
+        transform: translateY(-350px);
+        z-index: -1;
+    }
+
+    .header-img-container {
+        width: 500px;
+        height: 500px;
+    }
+
+    .header-container .icons {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        gap: 10px;
+        padding-top: 10px;
+    }
+
+    .background {
+        transform: skewY(-15deg) translateY(calc(80vw * tan(-30deg)));
+    }
+
+    main {
+        max-width: 1000px;
+    }
+
+    .projects-container {
+        grid-template-columns: repeat(2, 450px);
+    }
+    
+    footer>div {
+        width: 1000px;
+        max-width: 1000px;
+    }
+    
+    .footer-img {
+        width: 500px;
+    }
 }
